// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeNumber should return false for {} 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: object
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for 9007199254740991n 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: bigint
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for Symbol() 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for aa 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for asymmetricMatcher of any value that is not number 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: any(Bigint)
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for null 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for number with isNot true 1`] = `
Object {
  "message": "    
    expected should not be an number.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeNumber should return false for undefined 1`] = `
Object {
  "message": "    
    expected should be an number.
    got: undefined
",
  "pass": false,
}
`;
